tests/baselines/reference/derivedClassTransitivity2.errors.txt
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity2.ts(18,1): error TS2322: Type 'E' is not assignable to type 'C'.
  Types of property 'foo' are incompatible.
    Type '(x: 数字, y?: 文字) => 无值' is not assignable to type '(x: 数字, y: 数字) => 无值'.
      Types of parameters 'y' and 'y' are incompatible.
        Type '数字' is not assignable to type '文字'.


==== tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity2.ts (1 errors) ====
    // subclassing is not transitive when you can remove required parameters and add optional parameters
    
    class C {
        foo(x: number, y: number) { }
    }
    
    class D extends C {
        foo(x: number) { } // ok to drop parameters
    }
    
    class E extends D {
        foo(x: number, y?: string) { } // ok to add optional parameters
    }
    
    var c: C;
    var d: D;
    var e: E;
    c = e;
    ~
!!! error TS2322: Type 'E' is not assignable to type 'C'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '(x: 数字, y?: 文字) => 无值' is not assignable to type '(x: 数字, y: 数字) => 无值'.
!!! error TS2322:       Types of parameters 'y' and 'y' are incompatible.
!!! error TS2322:         Type '数字' is not assignable to type '文字'.
    var r = c.foo(1, 1);
    var r2 = e.foo(1, '');